<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEB3B"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="#FFEB3B"
        android:gravity="center_horizontal"
        android:text="@string/tvNombre"
        android:textColor="#0A0A0A"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btAgenda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/btAgenda"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btCalculadora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btCalculadora"
        android:textSize="24sp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"/>

    <Button
        android:id="@+id/btReceta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btReceta"
        android:textSize="24sp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"/>


</LinearLayout>