<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgendaActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvNuevoContacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal"
        android:paddingBottom="10dp"
        android:text="@string/tvNuevoContacto"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/llNombreAgenda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvNombreAgenda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:paddingLeft="10dp"
            android:paddingRight="5dp"
            android:text="@string/tvNombreAgenda"
            android:textSize="24sp"
            android:paddingStart="10dp"
            android:paddingEnd="5dp" />

        <EditText
            android:id="@+id/etNombreAgenda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llApellidosAgenda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvApellidosAgenda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:paddingLeft="10dp"
            android:paddingRight="0dp"
            android:text="@string/tvApellidosAgenda"
            android:textSize="24sp"
            android:paddingStart="10dp"
            android:paddingEnd="0dp" />

        <EditText
            android:id="@+id/etApellidosAgenda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llEmailAgenda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvEmailAgenda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:paddingLeft="10dp"
            android:paddingRight="5dp"
            android:text="@string/tvEmailAgenda"
            android:textSize="24sp"
            android:paddingStart="10dp"
            android:paddingEnd="5dp" />

        <EditText
            android:id="@+id/etEmailAgenda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ems="10"
            android:inputType="textEmailAddress" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llTelefonoAgenda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvTelefonoAgenda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:text="@string/tvTelefonoAgenda"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etTelefonoAgenda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ems="10"
            android:inputType="phone" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llNotasAgenda"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".AgendaActivity" >

        <TextView
            android:id="@+id/tvNotasAgenda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="0dp"
            android:text="@string/tvNotasAgenda"
            android:textSize="24sp"
            android:paddingStart="10dp"
            android:paddingEnd="0dp" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:autofillHints="" />
    </LinearLayout>

</LinearLayout>